# tasx

./: Cargo.toml  LICENSE  README.md  flake.nix
app/: help_template.txt  main.rs
examples/flake-parts/: tasx.nix
lib/: JsonModule.nix  default.nix  flakeModule.nix  mkApps.nix  mkOutputs.nix  myModule.nix  options.nix  unimplemented.nix
lib/mkTaskApps/: default.nix  mkGitPluginHook.nix  mkTaskApp.nix
template/flake-parts/: flake.nix
template/flake-utils/: flake.nix
template/json-conf/: flake.nix
templates/flake-utils/: flake.nix
templates/json-conf/: flake.nix
test/flake-parts/: flake.nix  tasx.nix
test/with-git-plugin/: tasx.nix
tests/flake-parts/: tasx.nix
tests/flake-utils/: flake.nix  tasx.nix
tests/json-conf/: flake.nix  tasx.json
tests/with-git-plugin/: tasx.nix
