[package]
name = "tasx"
version = "0.1.0"
edition = "2024"
authors = ["Daisuke Matsunami (Comavius) <comavius@proton.me>"]
description = "Nix-Flakes based tiny task manager with nix library"
license-file = "LICENSE"

[[bin]]
name = "tasx"
path = "app/main.rs"

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
